--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,5 @@
 #Grails Metadata file
-#Mon Oct 24 16:51:39 CEST 2011
+#Mon Dec 12 15:36:22 CET 2011
 app.grails.version=1.3.7
 app.name=MatrixImporter
 plugins.hibernate=1.3.7
